--- a/package.json
+++ b/package.json
@@ -3,10 +3,28 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/core": "^7.10.2",
+    "@babel/node": "^7.10.3",
+    "@babel/plugin-proposal-decorators": "^7.10.3",
+    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
+    "@babel/plugin-transform-runtime": "^7.10.3",
+    "@babel/polyfill": "^7.10.1",
+    "@babel/preset-env": "^7.10.3",
+    "@babel/preset-react": "^7.10.1",
+    "@babel/register": "^7.10.3",
+    "@babel/runtime-corejs3": "^7.10.3",
+    "@koa/router": "^9.0.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "asset-require-hook": "^1.2.0",
     "autoprefixer": "^9.8.0",
+    "core-js": "3",
+    "cross-env": "^7.0.2",
+    "express": "^4.17.1",
+    "koa": "^2.13.0",
+    "koa-bodyparser": "^4.3.0",
+    "koa-static": "^5.0.0",
     "postcss-modules": "^2.0.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
@@ -15,9 +33,10 @@
     "react-scripts": "^3.4.1"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "dev": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "start": "cross-env NODE_ENV=test node ./server/app.js",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -35,8 +54,5 @@
       "last 1 safari version"
     ]
   },
-  "devDependencies": {
-    "@babel/core": "^7.10.2",
-    "@babel/preset-react": "^7.10.1"
-  }
+  "devDependencies": {}
 }
